// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationsColumnConfiguration component should render column "category": category 1`] = `
<DocumentFragment>
  Cellular component
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "content": content 1`] = `
<DocumentFragment>
  Cell inner membrane
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "definition": definition 1`] = `
<DocumentFragment>
  The prokaryotic inner cell membrane is the selectively permeable membrane which separates the cytoplasm from the periplasm in prokaryotes with 2 membranes.
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "gene_ontologies": gene_ontologies 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        class="external-link"
        href="https://www.ebi.ac.uk/QuickGO/term/GO:0005886"
        rel="noopener"
        target="_blank"
      >
        plasma membrane (GO:0005886)
        <test-file-stub
          data-testid="external-link-icon"
          width="12.5"
        />
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "id": id 1`] = `
<DocumentFragment>
  <span
    class="no-wrap accession-view"
  >
    <a
      class="accession"
      href="/locations/SL-0037"
    >
      SL-0037
    </a>
  </span>
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "is_a": is_a 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/locations/SL-0039"
      >
        Cell membrane
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "keyword": keyword 1`] = `
<DocumentFragment>
  <a
    href="/keywords/KW-0997"
  >
    Cell inner membrane
  </a>
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "links": links 1`] = `<DocumentFragment />`;

exports[`LocationsColumnConfiguration component should render column "name": name 1`] = `
<DocumentFragment>
  Cell inner membrane
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "note": note 1`] = `<DocumentFragment />`;

exports[`LocationsColumnConfiguration component should render column "part_of": part_of 1`] = `<DocumentFragment />`;

exports[`LocationsColumnConfiguration component should render column "references": references 1`] = `<DocumentFragment />`;

exports[`LocationsColumnConfiguration component should render column "statistics": statistics 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/uniprotkb?query=%28cc_scl_term%3ASL-0037%29"
      >
        2,293,492 UniProtKB entries
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb?query=%28cc_scl_term%3ASL-0037%29+AND+%28reviewed%3Atrue%29"
      >
        27,448 reviewed UniProtKB entries
      </a>
    </li>
    <li>
      <a
        href="/uniprotkb?query=%28cc_scl_term%3ASL-0037%29+AND+%28reviewed%3Afalse%29"
      >
        2,266,044 unreviewed UniProtKB entries
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`LocationsColumnConfiguration component should render column "synonyms": synonyms 1`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      Cytoplasmic membrane
    </li>
    <li>
      Inner membrane
    </li>
    <li>
      Plasma membrane
    </li>
  </ul>
</DocumentFragment>
`;
